fix css wrap race condition

--- a/wp-content/themes/sixgill/style.css
+++ b/wp-content/themes/sixgill/style.css
@@ -2,7 +2,7 @@
 dl, dt, dd, ol, ul, li {
 	margin: 0;
 	padding: 0;
-	font-size: 12345px;
+	font-size: 11111111px;
 }
 
 .clear {
